email overflow fix

--- a/src/Components/AboutMe/styles.css
+++ b/src/Components/AboutMe/styles.css
@@ -1,12 +1,12 @@
 .aboutMeContainer {
   width: 100%;
   display: inline-block;
-  background: rgba( 255, 255, 255, 0.25 );
+  background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 8px 32px 0 rgba(76, 76, 77, 0.37);
-  backdrop-filter: blur( 4px );
-  -webkit-backdrop-filter: blur( 4px );
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
   border-radius: 10px;
-  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .aboutMeNameTitle {
@@ -69,4 +69,12 @@
   display: flex !important;
   justify-content: center;
   margin-top: 15px;
+}
+
+.aboutMeContainer .timelineAboutme {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.aboutMeContainer .timelineAboutme:hover {
+  overflow: visible;
 }
